<resources>
    <string name="app_name">" Computer Registry"</string>
    <string name="nomeEmpresa">© 2017 Jhonatan Colina</string>

    <!-- Strings relacionadas ao login -->
    <string name="hintUsuario">User</string>
    <string name="labelLogin">LOGIN TO ACCESS THE SYSTEM</string>
    <string name="botaoLimpar">Clear</string>
    <string name="botaoLogin">Login</string>

    <!-- Strings relacionadas a titulos -->
    <string name="inicio">Home</string>
    <string name="configuracoes">User Data</string>

    <!--Strings relacionadas a tela de Configuração do Usuário -->
    <string name="hintIDUsuarioConf">ID</string>
    <string name="hintNivelAdmUsuarioConf">Administrative Level</string>
    <string name="hintRepetirSenhaUsuarioConf">Repeat Password</string>
    <string name="btSalvarDadpsUsuaropConf">Save Data</string>
    <string name="hintSenha">Password</string>
    <string name="campoUsuarioObg">Input \'User\' required!</string>
    <string name="campoSenhObg">Input \'Password\' required!</string>
    <string name="campoRepSenhaObg">Input \'Repeat Password\' required!</string>
    <string name="campoLiberado">Inputs released for editing</string>
    <string name="campoSenhaRepeteSenha">The \'Password\' and \'Repeat Password\' inputs do not match.</string>
    <string name="UsuarioSenhaIncorreto">\'User\' and(or) \'Password\' are incorrect(s).</string>
    <string name="erroConexao">Conection Error.\\nDo you have an internet ?</string>
    <string name="usuarioAtualizado">User has updated with success\\nUse this credentials for next login</string>
    <string name="usuarioAdmin">Administrator</string>
    <string name="usuarioComum">Common User</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logoff">Logoff</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_novoUsuario">New User</string>
    <string name="menu_listarUsuario">List of Users</string>
    <string name="hintComputer">Computer</string>
    <string name="usuarioSalvo">User has been saved with success!</string>
    <string name="filtroListaUsuario">Filter</string>
    <string name="erroEncontrarUsuario">Error on find User</string>
    <string name="menu_manterUsuario">Maintain User</string>
    <string name="deletarUsuario">Delete User</string>
    <string name="msgDeletarUsuario">Are you sure you want to delete this user ?</string>
    <string name="msgDeletarUsuarioOk">User has been deleted with success</string>
    <string name="informacoes">Information</string>
    <string name="sobre">About</string>
    <string name="menu_novaMaquina">New Computer</string>
    <string name="menu_listaMaquina">List of Computers</string>
    <string name="hostnameMaquina">Hostname</string>
    <string name="macMaquina">MAC</string>
    <string name="IPMaquina">IP Address</string>
    <string name="LocalMaquina">Place</string>
    <string name="ObservacaoMaquina">Comment</string>
    <string name="btSalvarDadosNovaMaquina">Save Data</string>
    <string name="campoNomeMaquinaObg">Input \'Hostname\' required!</string>
    <string name="campoMacMaquinaObg">Input \'MAC\' required!</string>
    <string name="campoIPMaquinaObg">Input \'IP Address\' required!</string>
    <string name="campoLocalMaquinaObg">Input \'Place\' required!</string>
    <string name="campoObservacaoMaquinaObg">Input \'Comment\' required!</string>
    <string name="maquinaSalva">Computer has been saved with success</string>
    <string name="filtroListaMaquina">Filter by \'Hostname\'</string>
    <string name="erroEncontrarMaquina">Error on find computer</string>
    <string name="deletarMaquina">Delete Computer</string>
    <string name="msgDeletarMaquina">Are you sure you want to delete this computer ?</string>
    <string name="msgDeletarMaquinaOk">Computer has been deleted with success</string>
    <string name="menu_manterMaquina">Maintain Computer</string>
    <string name="maquinaAtualizada">Computer has been updated with success</string>
    <string name="versao">Version 1.0</string>
    <string name="desenvolvido">Developed by Jhonatan Colina</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="countMaquinas">Number of Computers</string>
    <string name="countUsuarios">Number of Users</string>
</resources>
