<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context="br.com.jhonatancolina.cadastromaquina.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_height="@dimen/imageLogoHeight"
                android:id="@+id/splash"
                android:background="@drawable/logo_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="@dimen/nomeSistema"
                android:textAllCaps="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/textoPrimario"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labelLogin"
                android:textSize="@dimen/loginAcess"
                android:layout_marginTop="20sp"
                android:textColor="@color/textoSecundario"
                android:layout_gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/etUsuario"
                    android:hint="@string/hintUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:textColor="@color/textoPrimario"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/etSenha"
                    android:hint="@string/hintSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/textoPrimario"
                    />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btLimpar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botaoLimpar"
                    android:layout_weight="1"
                    android:backgroundTint="@color/corBotao"
                    android:textColor="@color/textoPrimario"
                    android:onClick="limpaCampos"/>

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botaoLogin"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/corBotao"
                    android:textColor="@color/textoPrimario"
                    android:onClick="fazLogin"/>

            </LinearLayout>
            <!-- Progresso no Login -->
            <ProgressBar
                android:id="@+id/login_progressL"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/nomeEmpresa" />
    </LinearLayout>



</LinearLayout>
