<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jhonatancolina.cadastromaquina.NovaMaquinaFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etNomeMaquinaNovMaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hostnameMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etMacMaquinaNovMaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etIPNovMaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/IPMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etLocalMaquinaNovMaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LocalMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etObservacaoMaquinaNovMaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ObservacaoMaquina"
                    android:layout_marginBottom="10dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSalvarDadosUsuarioNovoMaq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/corBotao"
                android:text="@string/btSalvarDadosNovaMaquina"
                android:visibility="visible"/>

            <!-- Progresso na request -->
            <ProgressBar
                android:id="@+id/login_progressNovoUsu"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
