<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.jhonatancolina.cadastromaquina.ManterMaquinaActivity"
    tools:showIn="@layout/activity_manter_maquina"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etIdMaquinaManter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintIDUsuarioConf"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etNomeMaquinaManter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hostnameMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etMacMaquinaManter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/macMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etIPManter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/IPMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etLocalMaquinaManter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LocalMaquina"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etObservacaoMaquinaNovMaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ObservacaoMaquina"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSalvarDadosMaquina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/corBotao"
                android:text="@string/btSalvarDadpsUsuaropConf"
                android:onClick="salvarDadosMaquina"
                android:visibility="gone"/>

            <!-- Progresso no Login -->
            <ProgressBar
                android:id="@+id/login_progressConf"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
