<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.jhonatancolina.cadastromaquina.ConfiguracoesActivity"
    tools:showIn="@layout/activity_configuracoes"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/etIdUsuarioDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintIDUsuarioConf"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etNivelAdminDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintNivelAdmUsuarioConf"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etNomeUsuarioDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintUsuario"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etSenhaDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintSenha"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etRepetirSenhaDados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintRepetirSenhaUsuarioConf"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    android:enabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSalvarDadosUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/corBotao"
                android:text="@string/btSalvarDadpsUsuaropConf"
                android:onClick="salvarDadosUsuario"
                android:visibility="gone"/>

            <!-- Progresso no Login -->
            <ProgressBar
                android:id="@+id/login_progressConf"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
