<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jhonatancolina.cadastromaquina.NovoUsuarioFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/frm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etNomeUsuarioDadosNovoUsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintUsuario"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintNivelAdmUsuarioConf"
                    android:textSize="16dp"/>

                <Switch
                    android:id="@+id/switchNivelAdmNovoUsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:switchMinWidth="55dp"
                    android:checked="false"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etSenhaDadosNovoUsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintSenha"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/etRepetirSenhaDadosNovoUsu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintRepetirSenhaUsuarioConf"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btSalvarDadosUsuarioNovoUsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/corBotao"
                android:text="@string/btSalvarDadpsUsuaropConf"
                android:visibility="visible"/>

            <!-- Progresso na request -->
            <ProgressBar
                android:id="@+id/login_progressNovoUsu"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
